--- a/JsfUygulamasi/pom.xml
+++ b/JsfUygulamasi/pom.xml
@@ -27,19 +27,20 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.2</version>
             <scope>provided</scope>
         </dependency>
        <dependency>
 	<groupId>org.glassfish.extras</groupId>
 	<artifactId>glassfish-embedded-all</artifactId>
 	<version>3.1</version>
+        <scope>provided</scope>
 </dependency>
 
 <dependency>
